# dialogue-forge

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  start-dialogue-forge.bat
dialogue_forge/: __init__.py
dialogue_forge/cli/: __init__.py  commands.py  export_cmd.py  play_cmd.py  validate_cmd.py
dialogue_forge/export/: __init__.py  exporter.py
dialogue_forge/parser/: __init__.py  node.py  parser.py
dialogue_forge/web/: __init__.py  app.py
dialogue_forge/web/static/css/: main.css
dialogue_forge/web/static/js/: app.js
dialogue_forge/web/static/src/: main.js
dialogue_forge/web/static/src/app/: DialogueForgeApp.js
dialogue_forge/web/static/src/player/: DialoguePlayer.js
dialogue_forge/web/static/src/state/: GameState.js
dialogue_forge/web/static/src/utils/: helpers.js
dialogue_forge/web/templates/: index.html
docs/: dlg-language-specification.md
editors/: README.md
editors/neovim/ftdetect/: dlg.vim
editors/neovim/ftplugin/: dlg.vim
editors/neovim/syntax/: dlg.vim
editors/vscode/dlg-language/: language-configuration.json  package.json
editors/vscode/dlg-language/syntaxes/: dlg.tmLanguage.json
resources/dialogue/examples/: branching_story.dlg  example.dlg  minimal.dlg  scene1_tavern.dlg  scene2_road.dlg  test_all_features.dlg
tests/: __init__.py  test_parser.py  test_validator.py  test_web_state.py
tests/fixtures/: entry_exit_test.dlg  entry_exit_test.json  fire_nation_prologue.dlg
