[project]
name = "dialogue-forge"
version = "0.1.0"
description = "Visual dialogue editor and parser for .dlg format files"
authors = [
    {name = "Samuel Nuttall"}
]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["dialogue", "rpg", "game-development", "parser", "editor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "flask>=3.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
dlg = "dialogue_forge.cli:cli"
dlg-validate = "dialogue_forge.cli.validate_cmd:main"
dlg-play = "dialogue_forge.cli.play_cmd:main"
dlg-export = "dialogue_forge.cli.export_cmd:main"
dlg-web = "dialogue_forge.web.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dialogue_forge"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
